# esp32-dmx-python

./: .gitignore  README.md
esp32/: sketch.ino
python/: common.py  door.py  dsl.py  evening.py  f0-demo.py  fixtures.py  flake.nix  icon.py  main.py  pyproject.toml  simple.py  test_dsl.py  utils.py
qlcplus/: qlc.qxw
qlcplus/fixtures/: Kostava44-Eve.qxf  Kostava44-Flood.qxf
