[tool.poetry]
name = "python-artnet-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_artnet_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pyartnet = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
